Add: - real implementation of plugins and plugin settings in the menu - Removing the test plugin settings
Edit:
- Cleaning codebase, and removing unused imports

TODO: implement plugin local lang files, continue cleaning settings codebase and adding more advanced options for developer API